# gpu-proxy

./: .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  README.md  flake.nix  main.cpp  result
kubernetes/: module.nix
nix/: module.nix
src/: config.cpp  config.hpp  connection.cpp  connection.hpp  event_loop.cpp  event_loop.hpp  main.cpp  pool_manager.cpp  pool_manager.hpp  ssl_utils.cpp  ssl_utils.hpp  stratum.cpp  stratum.hpp  worker_manager.cpp  worker_manager.hpp
